--- a/app/views/author/index.html.erb
+++ b/app/views/author/index.html.erb
@@ -7,7 +7,8 @@
   <% @authors.each do |author| %>
     <tr>
       <td><%= author.name %></td>
-      <td><%= link_to author.homepage, author_path(author) %></td>
+      <td><%= link_to "View", author_path(author) %></td>
+      <td><%= link_to "Edit", edit_author_path(author) %></td>
     </tr>
     <% end %>
 </table>
