Add destroy method to controller

--- a/app/views/author/index.html.erb
+++ b/app/views/author/index.html.erb
@@ -10,6 +10,7 @@
       <td><%= link_to author.homepage, author.homepage %></td>
       <td><%= link_to 'View', author_path(author) %></td>
       <td><%= link_to 'Edit', edit_author_path(author) %></td>
+      <td><%= link_to 'Delete', author_path(author), method: :delete %></td>
     </tr>
     <% end %>
 </table>
