Render author on paper page

--- a/app/views/papers/show.html.erb
+++ b/app/views/papers/show.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-Authors: <%= @paper.authors.join ', ' %>
+Authors: <%= @paper.authors.map { |author| author.name }.join ', ' %>
 <%= render @paper %>
 
 <div>
